Start footer and header components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-gobarber-web",
+  "name": "pedro-siqueira-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
