--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "yup": "^0.28.5"
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "eslint": "^6.8.0",
