--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@types/yup": "^0.28.3",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
+    "bootstrap": "^4.5.0",
     "polished": "^3.6.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-slick": "^0.26.1",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2",
+    "typescript": "^3.9.0-beta",
     "yup": "^0.28.5"
   },
   "scripts": {
