--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.28.3",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "bootstrap": "^4.5.0",
+    "mdbreact": "^4.27.0",
     "polished": "^3.6.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -23,6 +25,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "styled-components": "^5.1.0",
     "typescript": "^3.9.0-beta",
     "yup": "^0.28.5"
