Add transitions to projects component

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/aos": "^3.0.3",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -16,6 +17,7 @@
     "@types/yup": "^0.28.3",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "mdbreact": "^4.27.0",
     "polished": "^3.6.2",
