--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/reach__router": "^1.3.5",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "mdbreact": "^4.27.0",
