--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-switch": "^5.0.1",
     "styled-components": "^5.1.0",
     "typescript": "^3.9.0-beta",
     "yup": "^0.28.5"
