--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^3.10.0",
     "react-intl": "^4.7.5",
     "react-router-dom": "^5.1.2",
