--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
-      - run: npm test
-      - run: npm build
+      - run: yarn ci
+      - run: yarn test
+      - run: yarn build
