fix: update integration tests

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -5,13 +5,15 @@ on:
     branches: [master]
 
 jobs:
-  test_pull_request:
+  test:
+    name: Running Units Tests
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn ci
-      - run: yarn test
-      - run: yarn build
+      - cmd: install
+      - cmd: build
+      - cmd: test
